Issue:83932 Progress Bar and Next/Prev Section buttons alignment fixed

--- a/scss/card-layout.scss
+++ b/scss/card-layout.scss
@@ -433,7 +433,7 @@
                         gap:$gap-16;
                         @media (max-width:$screen-900) {
                             // flex-direction: column;
-                            align-items: unset;
+                            // align-items: unset;
                             // gap: $gap-24;
                         }
                         @media (max-width:$sm-screen-bp) {
@@ -456,10 +456,14 @@
                             }
                             .progress-bar-warpper{
                                 @media (max-width:$sm-screen-bp){
-                                    justify-content: center;
+                                    // justify-content: center;
                                     flex-direction: row;
                                     flex-wrap: nowrap;
                                     align-items: center;
+                                }
+
+                                .progress {
+                                    max-width: $progress-bar-min-width;
                                 }
                             }
                         }
